# lingcite

./: .flake8  .gitignore  .spelling  .yamllint.yml  Dockerfile  Dockerfile.dev  Dockerfile.prod  LICENSE  Makefile  README.md  create-package.sh  handler.py  index.html  justfile  myinput-with-body.txt  myinput.txt  pyproject.toml  requirements.dev.txt  requirements.prod.txt  requirements.txt  txtlatex.py  ut.py
.github/workflows/: gate-keeper.yml
src/: handler.py
src/lingcite/: __init__.py  bib.py  gramcite.py
tests/: sample-input.txt  sample-output.txt  test_functional.py
